updates for BTI sstables and other fixes